<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.flaviocaruso.slotmachine.EscolhaActivity"
    android:orientation="vertical"
    android:background="@color/cinza"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tibia"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textSize="30sp"
        android:textColor="@color/preto"
        android:paddingTop="20dp"
        android:id="@+id/sexo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:textSize="25sp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbFeminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/feminino"
                android:textSize="25sp" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="20sp"
        android:textColor="@color/preto"
        android:layout_marginTop="30dp"
        android:id="@+id/tvNome"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/preto"
        android:textSize="25sp"
        android:id="@+id/etNome"
        android:hint="@string/dtnome"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fichas"
        android:textSize="30sp"
        android:textColor="@color/preto"
        android:layout_marginTop="30dp"
        android:id="@+id/fichas"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/fichas"
        android:background="@color/branco"
        android:layout_marginTop="10dp"
        android:id="@+id/spfichas">
    </Spinner>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:text="@string/voltar"
            android:textSize="20sp"
            android:background="@drawable/botao_customizado"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/btVoltar1"
            android:onClick="voltarTelaMenu2"
            android:layout_marginTop="16dp"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:text="@string/jogar"
            android:textSize="25sp"
            android:background="@drawable/botao_customizado"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/btJogar"
            android:onClick="irTelaJogo"
            android:layout_marginLeft="25dp"/>

    </LinearLayout>

</LinearLayout>
