<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.flaviocaruso.slotmachine.MenuActivity"
    android:orientation="vertical"
    android:background="@drawable/wallpaper2"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="440dp"
        android:layout_gravity="center"
        android:background="#fff"
        android:alpha="0.6"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_jogo"
            android:textSize="32dp"
            android:textColor="@color/preto"
            android:gravity="center"
            android:paddingTop="12dp"
            android:id="@+id/slot"/>

        <ImageView
            android:layout_width="350dp"
            android:layout_height="120dp"
            android:background="@drawable/tibia"
            android:alpha="1.0"
            android:layout_marginTop="90dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/versao"
            android:textSize="24dp"
            android:textColor="@color/preto"
            android:gravity="center"
            android:paddingTop="40dp"
            android:id="@+id/versao"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vers"
            android:textSize="16dp"
            android:textColor="@color/preto"
            android:gravity="center"
            android:paddingTop="10dp"
            android:id="@+id/ver"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desenvolvedor"
            android:textSize="20dp"
            android:textColor="@color/preto"
            android:gravity="center"
            android:paddingTop="12dp"
            android:id="@+id/nome"/>

    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="Voltar"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/botao_customizado"
        android:layout_marginTop="35dp"
        android:id="@+id/btvoltar"
        android:textColor="@color/preto"
        android:textSize="20dp"
        android:onClick="voltarTelaMenu"/>

</LinearLayout>
